@@ -28,7 +28,7 @@ from base import HandlerError, DataError, FormatError, PasswordError, VersionErr
 from fpm import FPM
 from gpass import GPass04, GPass05
 from netrc import NetRC
-from pwsafe import PasswordSafe1, PasswordSafe2, MyPasswordSafe, PasswordGorilla
+from pwsafe import PasswordSafe1, PasswordSafe2, MyPasswordSafe, MyPasswordSafeOld, PasswordGorilla
 from rvl import RevelationXML, Revelation
 from text import PlainText
 from xhtml import XHTML
@@ -38,6 +38,7 @@ HANDLERS = [
 	GPass04,
 	GPass05,
 	MyPasswordSafe,
+	MyPasswordSafeOld,
 	NetRC,
 	PasswordGorilla,
 	PasswordSafe1,
