@@ -12,6 +12,8 @@ Revelation changelog
 
 	* GPass importer handles multi-line notes correctly
 
+	* added MyPasswordSafe import/export for old file format
+
 2005-08-23  Erik Grinaker <erikg@codepoet.no>
 
 	* more informative error messages for gnomemisc module
